[Fix] Fixes for 2.6 release (#2416)
* fix: cant install native gog games

* fix: Save-Sync not showing for Windows versions of GOG Games of which Linux versions are available #2402

* fix: GOG Download for linux version not working #2401

* fix: GOG games show `??` as the download size in the download manager #2409

* fix: Install dialog does not pre-select the default Wine #2406

* fix: Default theme is not accessibility friendly #2413

* fix: empty prefix on install

* ui: more colors fixed

* chore: better platform selection

* chore: log

* themes: the best I can do

* fix: Bosnian not written in Latin #2405

* chore: version

* ci: update windows and mac workflows

* chore: but report version update

* fix: powershell zip command

* other: another try

* fix: links should not have border

* ci: try with 7zip

* ci: remove cache

* fix: duplicated label on uninstall

* ci: dont publish windows files just sign them

* fix: zip path

* ci: dont forget yml

* ui: show syncing saves status on gamecard

* ci: sign portable as well

* fix: release command

--- a/src/frontend/styles/_colors.scss
+++ b/src/frontend/styles/_colors.scss
@@ -128,14 +128,6 @@ a {
   color: var(--text-default);
 }
 
-.danger {
-  color: var(--text-danger) !important;
-}
-
-.warning {
-  color: var(--text-warning) !important;
-}
-
 h1,
 h2,
 h3 {
